added background file

--- a/Irishpatlingrao_resume.html
+++ b/Irishpatlingrao_resume.html
@@ -9,11 +9,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
-    <title>SANCHEZ, DAIBEN ANGELO - Resume</title>
+    <title>Patlingrao,Irish - Resume</title>
 </head>
 
-<body
-    style="background-image:url('https://img.freepik.com/free-vector/pastel-watercolor-painted-background_23-2148959638.jpg?w=2000');font-family: 'Roboto'">
+<body style="background-image:url('gren_pastel_bg.jpg');font-family: 'Roboto'">
 </body>
 <div class="container">
     <h1 class="display-1 text-center mt-5">Irish Patlingrao's Resume</h1>
